--- a/Part1/index.html
+++ b/Part1/index.html
@@ -33,7 +33,9 @@
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
+    <button id="reset" onclick="(reset)">Reset</button>
   </main>
 </body>
+<script src="index.js"></script>
 
 </html>
